# floral-arrangement-mcp

./: README.md  pyproject.toml
src/floral_arrangement_mcp/: __init__.py  server.py
